updated formulas with calculations for pv, int, and time

--- a/basics/basics-6.html
+++ b/basics/basics-6.html
@@ -49,7 +49,7 @@
                                     <label style="margin-left: 73px">Time (n) </label>
                                     <input id="n" type="number" placeholder="0"><br>
 
-                                    <button id="FV1" type="button" class="btn calculate-btn">Calculate</button>
+                                    <button id="FV1" type="button" class="btn futurevalue calculate-btn">Calculate</button>
                                 </form>
                             </div>
                             <div class="answer" id="answer"></div>
