--- a/basics/basics-7.html
+++ b/basics/basics-7.html
@@ -46,7 +46,7 @@
                                     <input id="n" type="number" placeholder="0"><br>
 
                                 </form>
-                                <button id="FV2" type="button" class="btn calculate-btn">Calculate</button>
+                                <button id="FV2" type="button" class="btn futurevalue calculate-btn">Calculate</button>
                             </div>
                             <br>
                             <div class="answer" id="answer"></div>
