--- a/formulas/formulas-6.html
+++ b/formulas/formulas-6.html
@@ -9,12 +9,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>Time Value of Money - Formulas</title>
+    <title>TVM - Formulas</title>
 </head>
 
 <body>
     <div class="container-fluid">
-
 
         <div id="" class="slide">
             <div class="row slide-title">
@@ -26,7 +25,7 @@
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-8.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
@@ -45,11 +44,11 @@
                             <li>First, identify the variables in the problem. In essence, this question asks how much interest it will take to turn $1 that you have today into $3 in 10 years.
                                 <div><span class="math">\(PV=1\)<br>\(FV=3\)<br>\(i=?\)<br>\(n=10\)</span></div>
                             </li>
-                            <li>Next, plug the numbers into the equation:
+                            <li>Next, plug the numbers into the basic equation:
                                 <div><span class="math">\(FV=PV(1+i)^n\longrightarrow3=1(1+i)^{10}\)</span></div>
                             </li>
                             <li>Then solve for the unknown variable, which is interest (i) in this problem.</li>
-                            <p>IMPORTANT: The order of operations still applies to this problem. However, we can’t start as we normally would by adding the numbers in the parentheses, because one is an unknown variable. We also have to skip the exponent until later in the equation, because of the unknown variable. </p>
+                            <p>IMPORTANT: The order of operations still applies to this problem, however because of the unknown variable, you may have to start with the information that you have and then go back to the parenthesis and exponent.</p>
                         </ul>
                     </div>
                 </div>
