--- a/not-on-server/formulas11a-21.html
+++ b/not-on-server/formulas11a-21.html
@@ -9,14 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../tvm-styles.css">
 
-    <title>Time Value of Money - Formulas</title>
+    <title>TVM - Formulas</title>
 </head>
 
 <body>
     <div class="container-fluid">
 
-
-        <!--  problem 12 answer -->
+        <!--  problem 13 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -33,14 +32,18 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 12: Solution</h4>
-                        <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
+                        <h4>Exercise 13: Solution</h4>
+                        <p class="questions">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
+                        <p>Variables:</p>
                         <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <div class="math">
+                        <p class="math">
                             = ?<br>
                             = 20000<br>
                             = 7% &xrarr; 0.07<br>
-                            = 18
+                            = 18</p>
+                        <p>Then plug the numbers into the equation:</p>
+                        <div class="math">
+                            <img src="./images/tvm1_question12.png" class="img-fluid " alt="">
                         </div>
                     </div>
                 </div>
@@ -56,7 +59,6 @@
             </div>
 
         </div>
-
 
 
     </div> <!--  end of container -->
