--- a/not-on-server/formulas8a-15.html
+++ b/not-on-server/formulas8a-15.html
@@ -9,14 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../tvm-styles.css">
 
-    <title>Time Value of Money - Formulas</title>
+    <title>TVM - Formulas</title>
 </head>
 
 <body>
     <div class="container-fluid">
 
-
-        <!--  problem 9 answer -->
+        <!--  problem 8 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -33,16 +32,16 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 9: Solution</h4>
-                        <p>At a rate of 12% annual interest, how long would it take for an amount to double? Like one of the previous exercises, the amount invested today will double. In other words, the Future Value (FV) to Present Value (PV) ratio is 2:1. Use Future Value (FV) = 2 and Present Value (PV) = 1.</p>
+                        <h4>Exercise 8: Solution</h4>
+                        <p>At a rate of 12% annual interest, how long would it take for an amount to double?</p>
+                        <p>LIke one of the previous exercises, the amount invested today will double. In other words, the Future Value (FV)</span c> to Present Value (PV) ratio is 2:1. Use Future Value (FV) = 2 and Present Value (PV) = 1.</p>
                         <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">Present Value (PV) = 1<br>
+                        <p class="math">
+                            Present Value (PV) = 1<br>
                             Future Value (FV) = 2<br>
                             i = 12% &xrarr; .12<br>
-                            n = ?</p>
-                        <p>Then plug the numbers into the equation.</p>
-                        <p class="math"><img src="./images/tvm1_question4.png" class="img-fluid " alt=""></p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                            n = ?
+                        </p>
                     </div>
                 </div>
             </div>
@@ -57,6 +56,7 @@
             </div>
 
         </div>
+
 
 
     </div> <!--  end of container -->
