--- a/formulas/formulas-10.html
+++ b/formulas/formulas-10.html
@@ -9,13 +9,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../tvm-styles.css">
 
-    <title>Time Value of Money - Formulas</title>
+    <title>TVM - Formulas</title>
 </head>
 
 <body>
     <div class="container-fluid">
-
-        <!-- problem 8  -->
 
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
@@ -27,31 +25,32 @@
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-8.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 8: Calculate for Time (n)</h4>
+                        <h4>Exercise 3: Calculate for Time (n)</h4>
                         <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double?</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
                                     <label>Present Value (PV) </label>
-                                    <input id="Present Value (PV)alue-ex8" type="number"><br>
-                                    <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex8" type="number"><br>
-                                    <label>Interest (i)</label>
-                                    <input id="int-ex8" type="number"><br>
-                                    <label>Time (n)</label>
-                                    <input id="yrs-ex8" type="number"><br>
+                                    <input id="form3pv" type="number"><br>
+
+                                    <label style="margin-left: 10px">Future Value (FV) </label>
+                                    <input id="form3fv" type="number"><br>
+
+                                    <label style="margin-left: 60px;">Interest (i) </label>
+                                    <input id="form3i" type="number"><br>
+                                    
                                 </form>
-                                <button onclick="exercise_8()" type="button" class="btn calculate-btn">Submit</button>
+                                <button type="button" class="btn time calculate-btn">Calculate</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex8"></div>
+                            <div class="answer" id="form3-ans"></div>
                         </div>
                     </div>
                 </div>
@@ -62,12 +61,10 @@
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
                     <a type="button" class="btn" href="formulas-9.html">Back</a>
-                    <a type="button" class="btn" href="formulas-11.html">Continue</a>
+                    <a type="button" class="btn" href="formulas-1.html">Restart</a>
                 </div>
             </div>
-
         </div>
-
 
     </div> <!--  end of container -->
 
