--- a/formulas/formulas-8.html
+++ b/formulas/formulas-8.html
@@ -9,13 +9,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../tvm-styles.css">
 
-    <title>Time Value of Money - Formulas</title>
+    <title>TVM - Formulas</title>
 </head>
 
 <body>
     <div class="container-fluid">
-
-        <!--  problem 4 -->
 
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
@@ -25,33 +23,32 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./../basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-
                         <h4>Exercise 1: Calculate Present Value (PV)</h4>
                         <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond? (assume annual compounding/discounting)</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
-                                    <label>Present Value (PV) </label>
-                                    <input id="Present Value (PV)alue-ex4" type="number"><br>
                                     <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex4" type="number"><br>
-                                    <label>Interest (i)</label>
-                                    <input id="int-ex4" type="number"><br>
-                                    <label>Time (n)</label>
-                                    <input id="yrs-ex4" type="number"><br>
+                                    <input id="form1fv" type="number"><br>
+
+                                    <label style="margin-left: 51px;">Interest (i) </label>
+                                    <input id="form1i" type="number">%<br>
+
+                                    <label style="margin-left: 67px">Time (n) </label>
+                                    <input id="form1n" type="number"><br>
                                 </form>
-                                <button onclick="exercise_4()" type="button" class="btn calculate-btn">Submit</button>
+                                <button type="button" class="btn presentvalue calculate-btn">Calculate</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex4"></div>
+                            <div class="answer" id="form1-ans"></div>
                         </div>
                     </div>
                 </div>
