--- a/formulas/formulas-9.html
+++ b/formulas/formulas-9.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../tvm-styles.css">
 
-    <title>Time Value of Money - Formulas</title>
+    <title>TVM - Formulas</title>
 </head>
 
 <body>
@@ -27,31 +27,31 @@
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-8.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 6: Calculate the Interest Rate (i)</h4>
+                        <h4>Exercise 2: Calculate the Interest Rate (i)</h4>
                         <p class="question">What interest rate is required for a deposit to double in 10 years?</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
-                                    <label>Present Value (PV) </label>
-                                    <input id="Present Value (PV)alue-ex6" type="number"><br>
-                                    <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex6" type="number"><br>
-                                    <label>Interest (i)</label>
-                                    <input id="int-ex6" type="number"><br>
-                                    <label>Time (n)</label>
-                                    <input id="yrs-ex6" type="number"><br>
+                                    <label>Present Value (PV)</label>
+                                    <input id="form2pv" type="number"><br>
+
+                                    <label style="margin-left: 10px">Future Value (FV) </label>
+                                    <input id="form2fv" type="number"><br>
+
+                                    <label style="margin-left: 76px">Time (n) </label>
+                                    <input id="form2n" type="number"><br>
                                 </form>
-                                <button onclick="exercise_6()" type="button" class="btn calculate-btn">Submit</button>
+                                <button type="button" class="btn interest calculate-btn">Calculate</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex6"></div>
+                            <div class="answer" id="form2-ans"></div>
                         </div>
                     </div>
                 </div>
@@ -65,9 +65,7 @@
                     <a type="button" class="btn" href="formulas-10.html">Continue</a>
                 </div>
             </div>
-
         </div>
-
 
     </div> <!--  end of container -->
 
