--- a/not-on-server/formulas-11.html
+++ b/not-on-server/formulas-11.html
@@ -9,13 +9,14 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../tvm-styles.css">
 
-    <title>Time Value of Money - Formulas</title>
+    <title>TVM - Formulas</title>
 </head>
 
 <body>
     <div class="container-fluid">
 
-        <!-- problem 9  -->
+
+        <!--  problem 10  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -33,19 +34,24 @@
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 9: Calculate the Unknown Variable</h4>
-                        <p>Solve the TVM equation and enter the value of the unknown variable.</p>
-                        <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double? <span class="note">Note: Please round to 3 places after the decimal point.</p>
+                        <h4>Exercise 12: Calculate Present Value (PV)</h4>
+                        <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
-                                    <label>n </label>
-                                    <input id="yrs-ex9" type="number"><br>
+                                    <label> </label>
+                                    <input id="Present Value (PV)alue-ex12" type="number"><br>
+                                    <label> </label>
+                                    <input id="Future Value (FV)alue-ex12" type="number"><br>
+                                    <label>Interest (i)</label>
+                                    <input id="int-ex12" type="number"><br>
+                                    <label>&nbsp;&nbsp; </label>
+                                    <input id="yrs-ex12" type="number"><br>
                                 </form>
-                                <button onclick="exercise_9()" type="button" class="btn calculate-btn">Submit</button>
+                                <button onclick="exercise_12()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex9"></div>
+                            <div class="answer" id="answer-ex12"></div>
                         </div>
                     </div>
                 </div>
