--- a/not-on-server/formulas6a-11.html
+++ b/not-on-server/formulas6a-11.html
@@ -9,13 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../tvm-styles.css">
 
-    <title>Time Value of Money - Formulas</title>
+    <title>TVM - Formulas</title>
 </head>
 
 <body>
     <div class="container-fluid">
 
-        <!--  problem 13 answer -->
+        <!--   problem 6 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -32,19 +32,17 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 13: Solution</h4>
-                        <p class="questions">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
+                        <h4>Exercise 6: Solution</h4>
+                        <p class="question">What interest rate is required for a deposit to double in 10 years?</p>
+                        The problem states that we want to double the investment, which means Future Value (FV) will be twice the amount of Present Value (PV). You can use any numbers, as long as you maintain as the Future Value (FV) to Present Value (PV) ratio, which is 2:1. However, to cut out the need to simplify the math later, it’s best to start with Future Value (FV) = 2 and Present Value (PV) = 1.
                         <p>Variables:</p>
                         <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">
-                            = ?<br>
-                            = 20000<br>
-                            = 7% &xrarr; 0.07<br>
-                            = 18</p>
-                        <p>Then plug the numbers into the equation:</p>
-                        <div class="math">
-                            <img src="./images/tvm1_question12.png" class="img-fluid " alt="">
-                        </div>
+                        <p class="math">Present Value (PV) = 1<br>
+                            Future Value (FV) = 2<br>
+                            i = ?<br>
+                            n = 10
+                        </p>
+
                     </div>
                 </div>
             </div>
