--- a/not-on-server/formulas9-16.html
+++ b/not-on-server/formulas9-16.html
@@ -9,13 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../tvm-styles.css">
 
-    <title>Time Value of Money - Formulas</title>
+    <title>TVM - Formulas</title>
 </head>
 
 <body>
     <div class="container-fluid">
 
-        <!-- problem 14  -->
+        <!-- problem 9  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -33,25 +33,19 @@
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 14: Identify the Variables</h4>
+                        <h4>Exercise 9: Calculate the Unknown Variable</h4>
                         <p>Solve the TVM equation and enter the value of the unknown variable.</p>
-                        <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and returns 4% annual interest?</p>
+                        <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double? <span class="note">Note: Please round to 3 places after the decimal point.</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
-                                    <label> </label>
-                                    <input id="Present Value (PV)alue-ex14" type="number"><br>
-                                    <label> </label>
-                                    <input id="Future Value (FV)alue-ex14" type="number"><br>
-                                    <label>Interest (i)</label>
-                                    <input id="int-ex14" type="number"><br>
-                                    <label>Time (n)</label>
-                                    <input id="yrs-ex14" type="number"><br>
+                                    <label>n </label>
+                                    <input id="yrs-ex9" type="number"><br>
                                 </form>
-                                <button onclick="exercise_14()" type="button" class="btn calculate-btn">Submit</button>
+                                <button onclick="exercise_9()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex14"></div>
+                            <div class="answer" id="answer-ex9"></div>
                         </div>
                     </div>
                 </div>
