--- a/not-on-server/formulas9a-17.html
+++ b/not-on-server/formulas9a-17.html
@@ -9,13 +9,14 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../tvm-styles.css">
 
-    <title>Time Value of Money - Formulas</title>
+    <title>TVM - Formulas</title>
 </head>
 
 <body>
     <div class="container-fluid">
 
-        <!-- problem 15  -->
+
+        <!--  problem 9 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -32,23 +33,16 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-
-
-                        <h4>Exercise 15: Calculate the Unknown Variable</h4>
-                        <p>Solve the TVM equation and enter the value of the variable in the box provided.</p>
-
-                        <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and pays returns 4% annual interest?</p>
-                        <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
-                                    <label> </label>
-                                    <input id="Present Value (PV)alue-ex15" type="number"><br>
-                                </form>
-                                <button onclick="exercise_15()" type="button" class="btn calculate-btn">Submit</button>
-                            </div>
-                            <br>
-                            <div class="answer" id="answer-ex15"></div>
-                        </div>
+                        <h4>Exercise 9: Solution</h4>
+                        <p>At a rate of 12% annual interest, how long would it take for an amount to double? Like one of the previous exercises, the amount invested today will double. In other words, the Future Value (FV) to Present Value (PV) ratio is 2:1. Use Future Value (FV) = 2 and Present Value (PV) = 1.</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <p class="math">Present Value (PV) = 1<br>
+                            Future Value (FV) = 2<br>
+                            i = 12% &xrarr; .12<br>
+                            n = ?</p>
+                        <p>Then plug the numbers into the equation.</p>
+                        <p class="math"><img src="./images/tvm1_question4.png" class="img-fluid " alt=""></p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
                     </div>
                 </div>
             </div>
