formulas done, uploaded to server, prepping for compounding section

--- a/formulas/formulas-1.html
+++ b/formulas/formulas-1.html
@@ -20,7 +20,7 @@
         <div id="" class="slide background-image">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h1 class="primary-title">Time Value of Money - Formulas</h1>
+                    <h1 class="primary-title">Time Value of Money</h1>
                     <!-- <h2 class="secondary-title">Part 1: The Basics</h2> -->
                 </div>
             </div>
