--- a/formulas/formulas-5.html
+++ b/formulas/formulas-5.html
@@ -69,7 +69,7 @@
                                     <li>Raise the number in the parentheses to the exponent. Leave enough significant digits so that you don’t commit a rounding error.
                                         <p><span class="math">\(259.37=PV(2.5937)\)</span></p>
                                     </li>
-                                    <li>Multiple and Divide: Divide both sides by the same number to isolate PV. Remember to cancel out the fraction.
+                                    <li>Multiple and Divide: Divide both sides by the same number to isolate PV. Remember to cancel out the matching numbers in the fraction.
                                         <div><span class="math" style="font-size: 1.5em;">\(\frac{259.37}{2.5937}=\frac{PV{\cancel{(2.5937)}}}{\cancel{2.5937}}\)</span></div>
                                     </li>
                                     <li>Adding and Subtracting is not necessary for this problem. The addition in this specific equation was taken care of in the parentheses.</li>
