--- a/basics/calc.html
+++ b/basics/calc.html
@@ -55,7 +55,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="basics-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
